Alignment fix.

--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -52,15 +52,15 @@ html{
   .section1 .hvcenter{
     flex:.8;
   }
-.home{
-display: flex;
-background-image:url(../assets/personallogo.png);
-background-repeat: no-repeat;
-background-size: cover;
-height: 75px;
-width: 75px;
-margin-right: 5%;
-}
+  .home{
+    display: flex;
+    background-image:url(../assets/personallogo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 75px;
+    width: 75px;
+    margin-right: 5%;
+  }
   .section2{
     padding: 44px 15px;
   }
@@ -147,6 +147,7 @@ margin-right: 5%;
       grid-template-areas:
       'picture header'
       'picture body';
+      justify-content: flex-start;
     }
     .picture{
       margin: auto 15px auto auto;
@@ -175,7 +176,7 @@ margin-right: 5%;
       background-position: left;
       background-size:600px;
       background-repeat: no-repeat;
-min-height: 600px;
+      min-height: 600px;
     }
     .serviceContainer{
       grid-template-areas:
@@ -242,109 +243,109 @@ min-height: 600px;
   }
   /*----- Toggle Button -----*/
   .toggle-nav {
-  	display:none;
+    display:none;
   }
 
   /*----- Menu -----*/
   @media screen and (min-width: 860px) {
-  	.menu {
-  	padding:25px 5%;
-  	background:#ffffff;
-  	}
+    .menu {
+      padding:25px 5%;
+      background:#ffffff;
+    }
   }
 
   .menu ul {
-  	display:inline-block;
+    display:inline-block;
   }
 
   .menu li {
-  	margin:0px 50px 0px 0px;
-  	float:left;
-  	list-style:none;
+    margin:0px 50px 0px 0px;
+    float:left;
+    list-style:none;
   }
 
   .menu li:last-child {
-  	margin-right:0px;
+    margin-right:0px;
   }
 
   .menu a {
-  	text-shadow:0px 1px 0px rgba(0,0,0,0.5);
-  	color:#777;
-  	transition:color linear 0.15s;
+    text-shadow:0px 1px 0px rgba(0,0,0,0.5);
+    color:#777;
+    transition:color linear 0.15s;
   }
 
   .menu a:hover, .menu .current-item a {
-  	text-decoration:none;
-  	color:#66a992;
+    text-decoration:none;
+    color:#66a992;
   }
 
   /*----- Responsive -----*/
   @media screen and (max-width: 1150px) {
-  	.wrap {
-  		width:90%;
-  	}
+    .wrap {
+      width:90%;
+    }
   }
 
   @media screen and (max-width: 970px) {
-  	.search-form input {
-  		width:120px;
-  	}
+    .search-form input {
+      width:120px;
+    }
   }
 
   @media screen and (max-width: 860px) {
-  	.menu {
-  		position:relative;
-  		display:inline-block;
-  	}
+    .menu {
+      position:relative;
+      display:inline-block;
+    }
 
-  	.menu ul.active {
-  		display:none;
-  	}
+    .menu ul.active {
+      display:none;
+    }
 
-  	.menu ul {
-  		position:absolute;
-  		top:120%;
-  		left:0px;
-  		padding:10px 18px;
-  		box-shadow:0px 1px 1px rgba(0,0,0,0.15);
-  		border-radius:3px;
-  		background:#303030;
-  	}
+    .menu ul {
+      position:absolute;
+      top:120%;
+      left:0px;
+      padding:10px 18px;
+      box-shadow:0px 1px 1px rgba(0,0,0,0.15);
+      border-radius:3px;
+      background:#303030;
+    }
 
-  	.menu ul:after {
-  		width:0px;
-  		height:0px;
-  		position:absolute;
-  		top:0%;
-  		left:22px;
-  		content:'';
-  		transform:translate(0%, -100%);
-  		border-left:7px solid transparent;
-  		border-right:7px solid transparent;
-  		border-bottom:7px solid #303030;
-  	}
+    .menu ul:after {
+      width:0px;
+      height:0px;
+      position:absolute;
+      top:0%;
+      left:22px;
+      content:'';
+      transform:translate(0%, -100%);
+      border-left:7px solid transparent;
+      border-right:7px solid transparent;
+      border-bottom:7px solid #303030;
+    }
 
-  	.menu li {
-  		margin:5px 0px 5px 0px;
-  		float:none;
-  		display:block;
-  	}
+    .menu li {
+      margin:5px 0px 5px 0px;
+      float:none;
+      display:block;
+    }
 
-  	.menu a {
-  		display:block;
-  	}
+    .menu a {
+      display:block;
+    }
 
-  	.toggle-nav {
-  		padding:20px;
-  		float:left;
-  		display:inline-block;
-  		text-shadow:0px 1px 0px rgba(0,0,0,0.5);
-  		color:#777;
-  		transition:color linear 0.15s;
-text-decoration:none;
-  	}
+    .toggle-nav {
+      padding:20px;
+      float:left;
+      display:inline-block;
+      text-shadow:0px 1px 0px rgba(0,0,0,0.5);
+      color:#777;
+      transition:color linear 0.15s;
+      text-decoration:none;
+    }
 
-  	.toggle-nav:hover, .toggle-nav.active {
-  		text-decoration:none;
-  		color:#66a992;
-  	}
+    .toggle-nav:hover, .toggle-nav.active {
+      text-decoration:none;
+      color:#66a992;
+    }
